NS Agent Mailbox: Move multi_core_mem_check.c
Now that the file is built into ns_agent_mailbox, it makes sense to
move it into the partition directory.

Signed-off-by: Chris Brand <chris.brand@cypress.com>
Change-Id: I74a5f48637ea91d95b159fd993d25f50d5de2d61

--- a/secure_fw/partitions/ns_agent_mailbox/CMakeLists.txt
+++ b/secure_fw/partitions/ns_agent_mailbox/CMakeLists.txt
@@ -21,7 +21,7 @@ target_sources(tfm_psa_rot_partition_ns_agent_mailbox
         ${CMAKE_SOURCE_DIR}/secure_fw/spm/cmsis_psa/tfm_rpc.c
         $<$<NOT:$<BOOL:${TFM_PLAT_SPECIFIC_MULTI_CORE_COMM}>>:${CMAKE_SOURCE_DIR}/secure_fw/spm/cmsis_psa/tfm_spe_mailbox.c>
         ns_agent_mailbox.c
-        ${CMAKE_SOURCE_DIR}/secure_fw/spm/cmsis_psa/tfm_multi_core_mem_check.c
+        tfm_multi_core_mem_check.c
 )
 
 target_link_libraries(tfm_psa_rot_partition_ns_agent_mailbox
