BL2: Fix MCUboot encrypted image support
Add define to config file to increase MCUboot buffer sizes when using
256-bit keys.

Change-Id: Ib9a799c587405d72a7c2aacb6d59a71023862bcd
Signed-off-by: Raef Coles <raef.coles@arm.com>

--- a/bl2/ext/mcuboot/CMakeLists.txt
+++ b/bl2/ext/mcuboot/CMakeLists.txt
@@ -152,7 +152,7 @@ add_custom_command(OUTPUT tfm_s_signed.bin
         --pad-header
         -H ${BL2_HEADER_SIZE}
         -s ${MCUBOOT_SECURITY_COUNTER_S}
-        -L ${MCUBOOT_ENC_KEY_LEN_S}
+        -L ${MCUBOOT_ENC_KEY_LEN}
         -d \"\(1,${MCUBOOT_NS_IMAGE_MIN_VER}\)\"
         $<$<STREQUAL:${MCUBOOT_UPGRADE_STRATEGY},OVERWRITE_ONLY>:--overwrite-only>
         $<$<BOOL:${MCUBOOT_ENC_IMAGES}>:-E${MCUBOOT_KEY_ENC}>
@@ -204,7 +204,7 @@ if(NS)
             --pad-header
             -H ${BL2_HEADER_SIZE}
             -s ${MCUBOOT_SECURITY_COUNTER_NS}
-            -L ${MCUBOOT_ENC_KEY_LEN_NS}
+            -L ${MCUBOOT_ENC_KEY_LEN}
             -d \"\(0, ${MCUBOOT_S_IMAGE_MIN_VER}\)\"
             $<TARGET_FILE_DIR:tfm_ns>/tfm_ns.bin
             $<$<STREQUAL:${MCUBOOT_UPGRADE_STRATEGY},OVERWRITE_ONLY>:--overwrite-only>
@@ -252,7 +252,7 @@ if(NS)
             --pad-header
             -H ${BL2_HEADER_SIZE}
             -s ${MCUBOOT_SECURITY_COUNTER_S}
-            -L ${MCUBOOT_ENC_KEY_LEN_S}
+            -L ${MCUBOOT_ENC_KEY_LEN}
             $<$<STREQUAL:${MCUBOOT_UPGRADE_STRATEGY},OVERWRITE_ONLY>:--overwrite-only>
             $<$<BOOL:${MCUBOOT_ENC_IMAGES}>:-E${MCUBOOT_KEY_ENC}>
             $<$<BOOL:${MCUBOOT_MEASURED_BOOT}>:--measured-boot-record>
