--- a/bl2/ext/mcuboot/include/mcuboot_config/mcuboot_config.h.in
+++ b/bl2/ext/mcuboot/include/mcuboot_config/mcuboot_config.h.in
@@ -1,6 +1,6 @@
 /*
  * Copyright (c) 2018 Open Source Foundries Limited
- * Copyright (c) 2019-2021 Arm Limited
+ * Copyright (c) 2019-2022 Arm Limited
  *
  * SPDX-License-Identifier: Apache-2.0
  */
@@ -51,6 +51,10 @@ extern "C" {
 
 #cmakedefine MCUBOOT_ENC_IMAGES
 #cmakedefine MCUBOOT_ENCRYPT_RSA
+
+#ifdef MCUBOOT_ENC_IMAGES
+#define MCUBOOT_AES_@MCUBOOT_ENC_KEY_LEN@
+#endif /* MCUBOOT_ENC_IMAGES */
 
 #define MCUBOOT_BOOT_MAX_ALIGN @MCUBOOT_BOOT_MAX_ALIGN@
 
