Build: MSP stack sealing moved to the Reset_Handler()
* Following CMSIS 5.9.0 stack sealing

Signed-off-by: Dávid Házi <david.hazi@arm.com>
Change-Id: I891e458af6e49e9fedbe7accae1b6d1e76e0241e

--- a/platform/ext/common/armclang/tfm_isolation_l3.sct.template
+++ b/platform/ext/common/armclang/tfm_isolation_l3.sct.template
@@ -143,7 +143,10 @@ LR_CODE S_CODE_START S_CODE_SIZE {
     }
 
     /* MSP */
-    ARM_LIB_STACK +0 ALIGN 32 OVERLAY EMPTY S_MSP_STACK_SIZE {
+    ARM_LIB_STACK +0 ALIGN 32 OVERLAY EMPTY S_MSP_STACK_SIZE - 0x8 {
+    }
+
+    STACKSEAL +0 EMPTY 0x8 {
     }
 
     ER_TFM_DATA +0 {
