--- a/platform/ext/common/iar/tfm_isolation_l3.icf.template
+++ b/platform/ext/common/iar/tfm_isolation_l3.icf.template
@@ -113,13 +113,15 @@ define block TFM_UNPRIV_CODE with alignment = 32 {
     readonly
 };
 
- 
+
 /* position tag block : base address of secure data area ( S_DATA_START)*/
 define block PT_SECURE_DATA_START with alignment = 32, size = 0 { };
 define block PT_PRIV_RWZI_START with alignment = 32, size = 0 { };
 
 define block TFM_SHARED_DATA with alignment = 32, size = BOOT_TFM_SHARED_DATA_SIZE { };
-define block ARM_LIB_STACK with alignment = 32, size = S_MSP_STACK_SIZE { };
+define block ARM_LIB_STACK with alignment = 32, size = S_MSP_STACK_SIZE - 0x8 { };
+
+define block STACKSEAL with size = 0x8 { };
 
 #if defined(ENABLE_HEAP)
     define block HEAP         with alignment = 8, size = S_HEAP_SIZE { };
@@ -265,6 +267,7 @@ define block DATA with fixed order {
     block PT_PRIV_RWZI_START,
     block TFM_SHARED_DATA,
     block ARM_LIB_STACK,
+    block STACKSEAL,
 #if defined(ENABLE_HEAP)
     block ARM_LIB_HEAP,
 #endif
