Platform: Add direct link to tfm_spm_defs
Links platform_s to tfm_spm_defs directly. Many platform files are using
tfm_spm_log.h and so need this link. Normally it is present via the link
to tfm_sprt, but if a custom attest HAL is used then the tfm_sprt link
is not present.

Signed-off-by: Jamie Fox <jamie.fox@arm.com>
Change-Id: Iac0c5b03a6503978af1f0337af2c5ff4f7fd05b7

--- a/platform/CMakeLists.txt
+++ b/platform/CMakeLists.txt
@@ -88,6 +88,7 @@ target_link_libraries(platform_s
         psa_interface
         tfm_partition_defs
         platform_crypto_keys
+        tfm_spm_defs # For tfm_spm_log.h
         $<$<BOOL:${PLATFORM_DEFAULT_ATTEST_HAL}>:tfm_sprt>
         $<$<BOOL:${TFM_PARTITION_CRYPTO}>:crypto_service_mbedcrypto>
         $<$<BOOL:${TFM_PARTITION_INITIAL_ATTESTATION}>:tfm_attestation_defs>
