SPM: Change the prototype of the irq init function
So that the second parameter is const.
This then allows us to change LOAD_INFO_IRQ to also return a const.

Change-Id: Ifd5fcb4c65b55f2e32622cd7cc5053e289c256ee
Signed-off-by: Chris Brand <chris.brand@cypress.com>

--- a/tools/templates/partition_load_info.template
+++ b/tools/templates/partition_load_info.template
@@ -60,10 +60,10 @@ extern psa_status_t {{manifest.entry_init}}(void);
     {% for irq in manifest.irqs %}
         {% if irq.source is number %}}
 extern enum tfm_hal_status_t {{"irq_" + irq.source|string + "_init"}}(void *p_pt,
-                                                                      struct irq_load_info_t *p_ildi);
+                                                                      const struct irq_load_info_t *p_ildi);
         {% else %}
 extern enum tfm_hal_status_t {{irq.source|lower + "_init"}}(void *p_pt,
-                                                            struct irq_load_info_t *p_ildi);
+                                                            const struct irq_load_info_t *p_ildi);
         {% endif %}
     {% endfor %}
 {% endif %}
