Add RAM_VECTORS_SUPPORT to L3 scatter file templates
RAM_VECTORS_SUPPORT was added to L1/L2 scatter files in
4f4992b9a544e9f5617a4582a1bd13e21e15a45d but L3 scatter files were
missed.

Signed-off-by: Bohdan Hunko <Bohdan.Hunko@infineon.com>
Signed-off-by: Chris Brand <chris.brand@cypress.com>
Change-Id: Ide033e8d7dd724b6542b0372d4365932c5f8c405

--- a/platform/ext/common/armclang/tfm_isolation_l3.sct.template
+++ b/platform/ext/common/armclang/tfm_isolation_l3.sct.template
@@ -236,6 +236,12 @@ LR_CODE S_CODE_START S_CODE_SIZE {
     }
 #endif
 
+#ifdef RAM_VECTORS_SUPPORT
+    ER_RAM_VECTORS +0 ALIGN 256 UNINIT {
+        * (RESET_RAM)
+    }
+#endif
+
     PT_SRAM_WATERMARK +0 EMPTY 0x0 {
         /* Position tag */
     }
