Use one ALIGN statement for Veneers region in GCC linker script
3afa64aa78ee70bf4abaf9e909ab7843fc2a3d61 redundantly introduced second
align statement for .gnu.sgstubs section. Second ALIGN statement is
redundant so in this commit it is removed to simplify the code.

Signed-off-by: Bohdan Hunko <Bohdan.Hunko@infineon.com>
Signed-off-by: Chris Brand <chris.brand@cypress.com>
Change-Id: Ic72b11d5427f2898b38707b1ce1371b58619e29f

--- a/platform/ext/common/gcc/tfm_isolation_l3.ld.template
+++ b/platform/ext/common/gcc/tfm_isolation_l3.ld.template
@@ -63,7 +63,7 @@ SECTIONS
      * a separate 32 bytes aligned region so that the SAU can programmed to just
      * set this region as Non-Secure Callable.
      */
-    .gnu.sgstubs ALIGN(32) : ALIGN(32)
+    .gnu.sgstubs ALIGN(32) :
     {
         *(.gnu.sgstubs*)
         . = ALIGN(32);
