Build: Change config_default to build minimum.
- disable all partitions
- default SPM backend is SFN
= set log level to silent
- adjust platform's CMake scripts
  - to include acceleartor conditionally
  - enable partitions required for some platform

Signed-off-by: Anton Komlev <anton.komlev@arm.com>
Change-Id: Icc36078c396e3a94a91fdf93d7f1bd5a46dc0d69

--- a/platform/CMakeLists.txt
+++ b/platform/CMakeLists.txt
@@ -103,8 +103,8 @@ target_link_libraries(platform_s
     PRIVATE
         psa_interface
         tfm_partition_defs
-        platform_crypto_keys
         tfm_spm_defs # For tfm_spm_log.h
+        $<$<BOOL:${TFM_PARTITION_CRYPTO}>:platform_crypto_keys>
         $<$<BOOL:${PLATFORM_DEFAULT_ATTEST_HAL}>:tfm_sprt>
         $<$<BOOL:${TFM_PARTITION_CRYPTO}>:crypto_service_mbedcrypto>
         $<$<BOOL:${TFM_PARTITION_INITIAL_ATTESTATION}>:tfm_attestation_defs>
