Crypto: Set features with config header file
Signed-off-by: Xinyu Zhang <xinyu.zhang@arm.com>
Change-Id: Id2d70444f774705cadf18d23ec02bc1842697149

--- a/platform/ext/accelerator/cc312/CMakeLists.txt
+++ b/platform/ext/accelerator/cc312/CMakeLists.txt
@@ -20,6 +20,13 @@ if(BL2)
     )
 endif()
 
+############################ Project Config ####################################
+
+target_compile_definitions(tfm_config
+    INTERFACE
+        CRYPTO_HW_ACCELERATOR_CC312
+)
+
 ################################ BL1 ###########################################
 
 if(BL1 AND PLATFORM_DEFAULT_BL1)
